# python-decouple-aws

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
decouple_aws/: __init__.py  exceptions.py  repository.py
tests/: test_basic_usage.py
